--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,21 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+Unity - suicidal-massage-chair/Assets/Code - Framework/EasyButtons/Examples.meta
+
+Unity - suicidal-massage-chair/Assets/Code - Project/Messaging/.idea/.idea.Messaging.dir/.idea/contentModel.xml
+
+Unity - suicidal-massage-chair/Assets/Code - Project/Messaging/.idea/.idea.Messaging.dir/.idea/encodings.xml
+
+Unity - suicidal-massage-chair/Assets/Code - Project/Messaging/.idea/.idea.Messaging.dir/.idea/indexLayout.xml
+
+Unity - suicidal-massage-chair/Assets/Code - Project/Messaging/.idea/.idea.Messaging.dir/.idea/modules.xml
+
+Unity - suicidal-massage-chair/Assets/Code - Project/Messaging/.idea/.idea.Messaging.dir/.idea/projectSettingsUpdater.xml
+
+Unity - suicidal-massage-chair/Assets/Code - Project/Messaging/.idea/.idea.Messaging.dir/.idea/vcs.xml
+
+Unity - suicidal-massage-chair/Assets/Code - Project/Messaging/.idea/.idea.Messaging.dir/riderModule.iml
+
+Unity - suicidal-massage-chair/Assets/Plugins/Sirenix/Demos.meta
